dashboard comm resets and nav log messages